--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <p>Hi, I'm LabGuy94 and I enjoy programming on the internet. The projects I like to work on are projects that automate things. I also enjoy playing video games as another way to keep me entertained. The languages I enjoy are JavaScript and Python. I can use various other languages(found on my github). My current projects are changing all the time as im trying to find the project I want to focus on.</p>
     </section>
     <section class="black">
-        <h1>My Projects</h1>
+        <h1>My Projects 📋</h1>
         <img src="https://github-readme-stats.vercel.app/api/pin/?username=labguy94&repo=mineflayer-auto-totem&theme=cobalt" alt="github.com/LabGuy94/mineflayer-auto-totem"> 
         <p></p>
         <img src="https://camo.githubusercontent.com/9072c0be4ac4c870f7af42173772544b6c8a8f4a5da86a5ca9b64c02e0cb27f4/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f3836353839373331363034333731383637362f3837353138303337303631323539323637302f657a6769662e636f6d2d6769662d6d616b6572322e676966" alt="gif of bot"> 
