Made badges clickable

--- a/index.html
+++ b/index.html
@@ -148,15 +148,21 @@
     </section>
     <section class="black">
         <h1>My Projects 📋</h1>
-        <img src="https://github-readme-stats.vercel.app/api/pin/?username=labguy94&repo=mineflayer-auto-totem&theme=cobalt" alt="github.com/LabGuy94/mineflayer-auto-totem"> 
+        <a href="https://github.com/LabGuy94/mineflayer-auto-totem" target="_blank"> 
+            <img src="https://github-readme-stats.vercel.app/api/pin/?username=labguy94&repo=mineflayer-auto-totem&theme=cobalt" alt="github.com/LabGuy94/mineflayer-auto-totem"> 
+        </a> 
         <p></p>
         <img src="https://camo.githubusercontent.com/9072c0be4ac4c870f7af42173772544b6c8a8f4a5da86a5ca9b64c02e0cb27f4/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f3836353839373331363034333731383637362f3837353138303337303631323539323637302f657a6769662e636f6d2d6769662d6d616b6572322e676966" alt="gif of bot"> 
         <p>An addon for Mineflayer that allows your bot to automatically equip totems of undying</p>
         <p></p>
-        <img src="https://github-readme-stats.vercel.app/api/pin/?username=labguy94&repo=mineflayer-kill-aura&theme=cobalt" alt="github.com/LabGuy94/mineflayer-kill-aura"> 
+        <a href="https://github.com/LabGuy94/mineflayer-kill-aura" target="_blank"> 
+            <img src="https://github-readme-stats.vercel.app/api/pin/?username=labguy94&repo=mineflayer-kill-aura&theme=cobalt" alt="github.com/LabGuy94/mineflayer-kill-aura"> 
+        </a> 
         <p>An addon for Mineflayer that allows your bot to kill mobs around it</p>
         <p></p>
-        <img src="https://github-readme-stats.vercel.app/api/pin/?username=labguy94&repo=groupbot&theme=cobalt" alt="github.com/LabGuy94/groupbot"> 
+        <a href="https://github.com/LabGuy94/groupbot" target="_blank"> 
+            <img src="https://github-readme-stats.vercel.app/api/pin/?username=labguy94&repo=groupbot&theme=cobalt" alt="github.com/LabGuy94/groupbot"> 
+        </a> 
         <p>A discord bot that allows you to interact with your Roblox group</p>
     </section>
     <div class="spacer layer1"></div>
