Added new project

--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
             <img src="https://github-readme-stats.vercel.app/api/pin/?username=labguy94&repo=groupbot&theme=tokyonight" alt="github.com/LabGuy94/groupbot"> 
         </a> 
         <p>A discord bot that allows you to interact with your Roblox group</p>
+        <p></p>
+        <a href="https://github.com/LabGuy94/minecraft-block-printer" target="_blank"> 
+            <img src="https://github-readme-stats.vercel.app/api/pin/?username=labguy94&repo=minecraft-block-printer&theme=tokyonight" alt="github.com/LabGuy94/minecraft-block-printer"> 
+        </a> 
+        <p>A mineflayer bot that prints images using commands</p>
     </section>
     <div class="spacer layer1"></div>
     <section class="lblue">
