Added Granny Bot!

--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@
             <img src="https://github-readme-stats.vercel.app/api/pin/?username=labguy94&repo=minecraft-block-printer&theme=tokyonight" alt="github.com/LabGuy94/minecraft-block-printer"> 
         </a> 
         <p>A mineflayer bot that prints images using commands</p>
+        <p></p>
+        <a href="https://discordbotlist.com/bots/885685093199413299" target="_blank"> 
+            <a href="https://discordbotlist.com/bots/885685093199413299"><img src="https://discordbotlist.com/api/v1/bots/885685093199413299/widget"></a> 
+            <p>Source Code Soon</p>
+        </a> 
+        <p>A discord bot that uses perspective api to moderate messages!</p>
     </section>
     <div class="spacer layer1"></div>
     <section class="lblue">
